<resources>
    <string name="app_name">GoLift</string>
    <string name="noodle">noodle</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--       Sign in Strings              -->
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="fitness_mode_findable">Fitness Mode Findable</string>
    <string name="go_lift">Go Lift</string>
    <string name="password">Password</string>
    <string name="passcode">Passcode</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>

    <!--       Workout page Strings              -->
    <string name="workoutHeader">Workouts</string>

    <string name="bicepHeader">Biceps</string>
    <string name="tricepHeader">Triceps</string>
    <string name="backHeader">Back</string>
    <string name="chestHeader">Chest</string>
    <string name="legsHeader">Legs</string>
    <string name="bicepHeader">Biceps</string>
    <string name="shoulderHeader">Shoulders</string>



    <!--       Home Page Strings              -->


    <!--       Search Strings              -->
</resources>