<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="357dp" />

    <EditText
        android:id="@+id/pass_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/passcode"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/goLift_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_lift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="141dp" />

    <TextView
        android:id="@+id/fmf_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness_mode_findable"
        app:layout_constraintBottom_toTopOf="@+id/user_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goLift_label"
        app:layout_constraintVertical_bias="0.176" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="531dp" />

    <Button
        android:id="@+id/login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/forgotPass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="467dp" />
</androidx.constraintlayout.widget.ConstraintLayout>