<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.muscleGroupsFrag"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/bicepsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/bicepLL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bicepTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bicepHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/bicepLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/backCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/backTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shoulderHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/backLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/chestCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chestTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chestHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/chestLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/legsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/legsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/legsHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/legsLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/shouldersCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/black"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/shouldersTItle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shoulderHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/shouldersLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tricepscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/black"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/tricepsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tricepHeader"
                        android:textSize="20sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>

                    <ListView
                        android:id="@+id/tricepsLV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>